--- a/thesis.tex
+++ b/thesis.tex
@@ -35,6 +35,7 @@
 \newacronym{er}{ER}{Endoplasmic Reticulum}
 \newacronym{ta}{TA}{Tail Anchor}
 \newacronym{gpi}{GPI}{Glycosylphosphatidylinositol}
+\newacronym{popc}{POPC}{Palmitoyloleoylphosphatidylcholine}
 
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
