--- a/chapter_gpi.tex
+++ b/chapter_gpi.tex
@@ -1,5 +1,5 @@
 
-\chapter{A novel GPI lipid anchor categorised} %Perhaps this will be for a later date!
+\chapter{A Novel GPI Lipid Anchor Categorised} %Perhaps this will be for a later date!
 \section{Abstract}
 \section{Introduction}
 \section{Methods}
