--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -7,14 +7,17 @@ This study aims to identify \gls{snare} proteins in eukaryotic proteomes by filt
 \section{Methods}
 
 \subsection{Filtering the Uniprot database}
-Steps carried out by Kalbfleisch {\it et al.} published in Traffic 2007 (8: 1687\-1694) were recreated using up to date tools. The non\-redundant human dataset of 145,715 proteins from SwissProt and TrEMBL \cite{Kalbfleisch2007, TheUniProtConsortium2014}. 2,478 singlepass proteins were programmatically extracted according to the TRANSMEM count from that list. Then TMDs not within 15AA of the C terminal were removed, resulting in 455 proteins. No splice isoforms were detected according to searching for NON\_TER annotation. 195 proteins of the 411 predicted proteins from the previous study were successfully mapped using the Uniprot mapping tools \cite{Kalbfleisch2007, TheUniProtConsortium2014}. Duplicate IDs from the previously predicted tail anchored protein were removed from the set. The remaining dataset contained XXX proteins.
+Steps carried out by Kalbfleisch {\it et al.} published in Traffic 2007 (8: 1687\-1694) were recreated using up to date tools. The non\-redundant human dataset of 145,715 proteins from SwissProt and TrEMBL \cite{Kalbfleisch2007, TheUniProtConsortium2014}. 2,478 singlepass proteins were programmatically extracted according to the TRANSMEM count from that list. Then TMDs not within 15AA of the C terminal were removed, resulting in 455 proteins. No splice isoforms were detected according to searching for NON\_TER annotation. 195 proteins of the 411 predicted proteins from the previous study were successfully mapped using the Uniprot mapping tools \cite{TheUniProtConsortium2014}. Duplicate IDs from the previously predicted tail anchored protein were removed from the set. The remaining dataset contained XXX proteins.
 
-\subsection{Calculating hydrophobicity}
+\subsection{Calculating Hydrophobicity}
+
+\subsection{Calculating Sequence Complexity}
+
 
 \section{Results}
 
-\subsection{An up to date tail-anchor dataset}
+\subsection{An Up To Date Tail-Anchor Dataset}
 
-\subsection{Potential tail-anchored SNARE protein discovery}
+\subsection{Potential Tail-Anchored SNARE Protein Discovery}
 
-\subsection{Biology of spontaneously inserting tail anchored proteins}
+\subsection{Biology of Spontaneously Inserting Tail Anchored Proteins}
