--- a/thesis.tex
+++ b/thesis.tex
@@ -76,17 +76,17 @@ Furthermore we provide an up-to-date dataset of potential Tail-Anchored proteins
 \prefacesection{Acknowledgements}
 I would like to thank all members of both the Eisenhaber research group, as well as the the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore I would like to extend my gratitude to the research group of Professor Stephen High, particularly
 
-Shout out to all the Biopython devs that saved my sanity!
+%Shout out to all the Biopython devs that saved my sanity!
 
-\subsection*{Preamble} %A side note. the "*" hides the section number.
-In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 article entitled {\it``What Philosophy of Biology is not''}:
+%\subsection*{Preamble} %A side note. the "*" hides the section number.
+%In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 article entitled {\it``What Philosophy of Biology is not''}:
 
-\begin{displayquote}
-``Periodically through the history of biology, biologists have tried to do
-a little philosophy...'' \cite{Hull1969}
-\end{displayquote}
+%\begin{displayquote}
+%``Periodically through the history of biology, biologists have tried to do a little philosophy...'' \cite{Hull1969}
+%\end{displayquote}
 
-I think this accurately summarises my attempts at applying philosophy to science for my philosophical doctorate. I can't help but wish my thesis title was ``The ins-and-outs of greasy peptides''.
+%I think this accurately summarises my attempts at applying philosophy to science for my philosophical doctorate. 
+I can't help but wish my thesis title was ``The ins-and-outs of greasy peptides''.
 
 So long, and thanks for all the fish!
 
