Added TA section update + other tweaks

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1,5 +1,5 @@
 
-\chapter{The ``negative-not-inside'' rule}
+\chapter{The ``Negative-Not-Inside'' Rule}
 \section{Abstract}
 
 \section{Introduction}
