--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 % The 12pt option is required by the 2001/02 thesis regulations
 % Hacked together from the LaTeX template from the maths department of UoM
 
+%Magic latex symbol finder: http://detexify.kirelabs.org/classify.html
 
 %This is just the standard line that tells the virtual "printer" what document we're making.
 % Remove the twoside option for single-sided printing
@@ -74,7 +75,7 @@ Furthermore we provide an up-to-date dataset of potential Tail-Anchored proteins
 
 %The preface section doesn't like being in a different document for some reason. (I think it's just my compiler, there is no reason why it shouldn't work)
 \prefacesection{Acknowledgements}
-I would like to thank all members of both the Eisenhaber research group, as well as the the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore I would like to extend my gratitude to the research group of Professor Stephen High, particularly
+I would like to thank all members of both the Eisenhaber research group, as well as the the Curtis and Warwicker research group for discussion, but in particular Jim Warwicker, Frank Eisenhaber, Birgit Eisenhaber, and Wing-Cheong Wong for supervision and guidance during my research. I would also like to thank The University of Manchester and the A*STAR Singapore Bioinformatics Institute for funding the project. Furthermore I would like to extend my gratitude to the research group of Professor Stephen High.
 
 %Shout out to all the Biopython devs that saved my sanity!
 
@@ -85,7 +86,7 @@ I would like to thank all members of both the Eisenhaber research group, as well
 %``Periodically through the history of biology, biologists have tried to do a little philosophy...'' \cite{Hull1969}
 %\end{displayquote}
 
-%I think this accurately summarises my attempts at applying philosophy to science for my philosophical doctorate. 
+%I think this accurately summarises my attempts at applying philosophy to science for my philosophical doctorate.
 I can't help but wish my thesis title was ``The ins-and-outs of greasy peptides''.
 
 So long, and thanks for all the fish!
